--- a/terms.html
+++ b/terms.html
@@ -117,5 +117,13 @@
     </div>
 </footer>
 
+<script>
+    document.getElementById("menuToggle").addEventListener("click", function () {
+    const navLinks = document.getElementById("navLinks");
+    navLinks.classList.toggle("active");
+});
+
+</script>
+
 </body>
 </html>
