--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
         <div class="hero-image">
 
             <div class="img-text">
-                <img src="fi_11029027.png"><p>Some Souls just understand each other upon meeting. - N.R. Hart</p><img src="fi_11029027 (1).png" id="margon">
+                <img src="fi_11029027.png" id="margon-2"><p>Some Souls just understand each other upon meeting. - N.R. Hart</p><img src="fi_11029027 (1).png" id="margon">
             </div>
 
         </div>  
@@ -204,7 +204,7 @@
     <div class="two-small">
      <div class="box-8"></div>
      <div class="box4">
-        <div class="m-card" style="margin-top: -5%;">
+        <div class="m-card"  id="mb-card">
             <h1>Travel, Art & Culture</h1>
             <p>This is a dining room for those looking to connect through the love of art, culture, and travel.</p>
         </div>
@@ -234,7 +234,7 @@
     <div class="two-small">
      <div class="box-10"></div>
      <div class="box4">
-        <div class="m-card" style="margin-top: -5%;">
+        <div class="m-card"  id="mb-card">
             <h1>Halal Date</h1>
             <p>Dining room specifically for Muslim single people looking to find their special Muslin someone.</p>
         </div>
@@ -319,7 +319,7 @@
     <div class="two-small">
      <div class="box-16"></div>
      <div class="box4">
-        <div class="m-card" style="margin-top: -5%;">
+        <div class="m-card"  id="mb-card">
             <h1>LGBTQIA2S+ Match</h1>
             <p>Lesbian, Gay, Bisexual, Transgender, Queer or Questioning, Intersex, Asexual or agender, two-sprit + Additional identify terms.</p>
         </div>
