--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="img.png" />
+                  <img src="couple-night-city-with-hug-kiss-date-romance-bonding-with-love-relationship-happiness-affection-people-with-commitment-trust-sweet-moment-romantic-together-outdoor.png" />
                   <div class="over-lay">
                       <h3 ><span class="rotate"><img src="fi_11029027.png"></span>
                          Free, Free and more free!<span class="rotate"><img src="fi_11029027 (1).png"></span>
@@ -58,7 +58,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="img2.png" />
+                  <img src="diverse-dancer-moving-city-pop-music-party-with-neon-light-regalement.png" />
                   <div class="over-lay">
                       <h3><span class="rotate"><img src="fi_11029027.png"></span>
                         Explore App in App!<span class="rotate"><img src="fi_11029027 (1).png"></span>
@@ -70,7 +70,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="img3.png" />
+                  <img src="friends-having-fun-dancing.png" />
                   <div class="over-lay">
                       <h3><span class="rotate"><img src="fi_11029027.png"></span>
                         Dining Rooms are individual dating apps<span class="rotate"><img src="fi_11029027 (1).png"></span>
@@ -84,7 +84,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="img5.png" />
+                  <img src="hands-people-clinking-glasses.png" />
                   <div class="over-lay">
                       <h3><span class="rotate"><img src="fi_11029027.png"></span> 
                         Events in Real Life<span class="rotate"><img src="fi_11029027 (1).png"></span>
@@ -97,7 +97,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="img4.png" />
+                  <img src="smiley-people-partying-front-view.png" />
                   <div class="over-lay">
                       <h3><span class="rotate"><img src="fi_11029027.png"></span>
                         Join Clubs and make more local friends<span class="rotate"><img src="fi_11029027 (1).png"></span>
@@ -111,7 +111,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="img6.png" />
+                  <img src="smiling-friends-having-fun-with-beer-pizza-outdoors.png" />
                   <div class="over-lay">
                       <h3><span class="rotate"><img src="fi_11029027.png"></span>
                         Our Mission<span class="rotate"><img src="fi_11029027 (1).png"></span>
