--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&family=Inter:wght@400;500;600&family=Lato:wght@400;700&family=Merriweather:wght@300;400&family=Oswald:wght@400;500&display=swap" rel="stylesheet">
@@ -78,7 +79,7 @@
   <p>We reserve the right to modify these terms at any time. Continued use of the site constitutes your acceptance of any changes.</p>
 
   <h2>6. Contact Us</h2>
-  <p>If you have any questions about these terms, please <a href="mailto:metatdinner@gmail.com">metatdinner@gmail.com</a></p>
+  <p>If you have any questions about these terms, please <a href="mailto:your-metatdinner@gmail.com">metatdinner@gmail.com</a></p>
 </main>
 
 
